Fix tabs align

--- a/app/assets/stylesheets/_map.scss
+++ b/app/assets/stylesheets/_map.scss
@@ -244,3 +244,10 @@
     }
   }
 }
+
+.tab-triple{
+  & > li{
+    width: calc(100% / 3);
+    text-align: center;
+  }
+}
